[package]
name = "listener"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
system_shutdown = "3.0.0"
tokio = { version = "1.21.0", features = ["full"] }

[profile.dev]
opt-level = 0

[profile.release]
strip = true
opt-level = "s"
lto= true
codegen-units = 1
